[gd_scene format=3 uid="uid://b681cx8qaa1wt"]

[ext_resource type="Script" uid="uid://b1d4xrfpuin48" path="res://Scripts/Spaceships/Enemies/Purple_devil.gd" id="1_cdv03"]
[ext_resource type="Texture2D" uid="uid://b3bge8nll82wl" path="res://Sprites/Spaceships/Enemies/PurpleDevil.png" id="2_cdv03"]
[ext_resource type="PackedScene" uid="uid://d3dj7xyf2qnss" path="res://scenes/AnimationAddOn/HealtBar.tscn" id="3_bpf5a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xmx44"]
atlas = ExtResource("2_cdv03")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tol3f"]
atlas = ExtResource("2_cdv03")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b5rs"]
atlas = ExtResource("2_cdv03")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxpk1"]
atlas = ExtResource("2_cdv03")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nhano"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmx44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tol3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b5rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxpk1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydpxu"]
radius = 14.142136

[node name="Enemy_Purple_Devil" type="CharacterBody2D" unique_id=509663520]
script = ExtResource("1_cdv03")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=229088122]
texture_filter = 1
rotation = 1.5729182
sprite_frames = SubResource("SpriteFrames_nhano")
autoplay = "default"
frame_progress = 0.9533385

[node name="ShootyPart" type="Node2D" parent="." unique_id=1954604416]
texture_filter = 1
position = Vector2(8, 0)

[node name="ShootyPart2" type="Node2D" parent="." unique_id=582459799]
texture_filter = 1
position = Vector2(15, -10)

[node name="ShootyPart3" type="Node2D" parent="." unique_id=368475647]
texture_filter = 1
position = Vector2(15, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=389244]
position = Vector2(4, 0)
scale = Vector2(1.2, 1)
shape = SubResource("CircleShape2D_ydpxu")

[node name="HealtBar" parent="." unique_id=69699297 instance=ExtResource("3_bpf5a")]
offset_left = -10.0
offset_top = -22.0
offset_right = 11.0
offset_bottom = -15.0
